# legacy-sipXlang-de

./: Makefile.am  configure.ac  sipxecs-lang-de.spec.in  sipxlang-de.spec.in
sipxpbx/: sipxplugin.beans.xml
sipxpbx/WEB-INF/: Home_de.properties  InternalErrorPage_de.properties  sipXconfig-web_de.properties
sipxpbx/WEB-INF/acd/: AcdAgentPresencePanel_de.properties  AcdSupervisorConsole_de.properties  ListAcdServers_de.properties
sipxpbx/aastra/: line_de.properties
sipxpbx/acd/: sipxacd-queue_de.properties
sipxpbx/backup/: backup_de.properties
sipxpbx/commserver/: server_de.properties  user-settings_de.properties
sipxpbx/dhcp/: dhcp_de.properties
sipxpbx/firewall/: firewall_de.properties
sipxpbx/ftp/: ftp_de.properties
sipxpbx/lg-nortel/: line_de.properties  phone_de.properties
sipxpbx/linksysPhone/: line_de.properties  phone_de.properties
sipxpbx/moh/: moh_de.properties
sipxpbx/nattraversal/: nattraversal_de.properties
sipxpbx/nortel/: line_de.properties  phone_de.properties
sipxpbx/nt1535/: line_de.properties  phone_de.properties
sipxpbx/ntp/: ntp.properties
sipxpbx/openacd/: sipxopenacd.properties
sipxpbx/sipxcallresolver/: sipxcallresolver_de.properties
sipxpbx/sipxconfig/: admin.properties
sipxpbx/sipxdns/: sipxdns.properties
sipxpbx/sipximbot/: sipximbot_de.properties
sipxpbx/sipxivr/: sipxivr_de.properties
sipxpbx/sipxpage/: sipxpage_de.properties
sipxpbx/sipxproxy/: sipxproxy_de.properties
sipxpbx/sipxregistrar/: sipxregistrar_de.properties
sipxpbx/sipxrest/: sipxrest_de.properties
sipxpbx/sipxrls/: sipxrls.properties
sipxpbx/sipxsaa/: sipxsaa.properties
sipxpbx/sipxsqa/: sipxsqa_de.properties
sipxpbx/sipxstatus/: sipxstatus.properties
sipxpbx/sipxvxml/: autoattendant_de.properties
sipxpbx/sipxwebsocket/: sipxwebsocket_de.properties
sipxpbx/snmp/: snmp.properties
sipxpbx/snom/: line_de.properties  phone_de.properties
sipxpbx/tunnel/: tunnel.properties
sipxpbx/unmanaged/: services_de.properties
(+245 files in other folders)
