AC_PREREQ(2.57)
AC_INIT(sipxlang-de, 4.6.0, sipx-dev@list.sipfoundry.org)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR([sipxpbx/sipxplugin.beans.xml])
AM_INIT_AUTOMAKE(foreign tar-ustar)
m4_include([config/sipXlib2.m4])
AC_SUBST(LANG_ID, de)
AC_CONFIG_FILES([
  Makefile
  sipxlang-de.spec
])
AC_OUTPUT
